hphp/hack/test/typecheck/is_expression/invalid_hint_noreturn.php.exp
File "invalid_hint_noreturn.php", line 5, characters 5-15:
  err
File "invalid_hint_noreturn.php", line 4, characters 13-20:
You can only use the `noreturn` type as the return type of a function or method (Naming[2063])
